app-datetime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datetime-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datetime-frontend
  template:
    metadata:
      labels:
        app: datetime-frontend
    spec:
      containers:
      - name: frontend
        image: xcevor/datetime-react:ingress
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: datetime-frontend-service
spec:
  selector:
    app: datetime-frontend
  ports:
  - port: 80
    targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: datetime-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datetime-backend
  template:
    metadata:
      labels:
        app: datetime-backend
    spec:
      containers:
      - name: frontend
        image: xcevor/datetime-node:ingress
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: datetime-backend-service
spec:
  selector:
    app: datetime-backend
  ports:
  - port: 3000
    targetPort: 3000
