app-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-test
  template:
    metadata:
      labels:
        app: app-test
    spec:
      containers:
      - image: chentex/go-rest-api
      # - image: xcevor/welcomeapp:ingress
        imagePullPolicy: Always
        name: app-test
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app-test-service
spec:
  selector:
    app: app-test
  ports:
  - port: 80
    targetPort: 8080
