app-todoweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-todoweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-todoweb
  template:
    metadata:
      labels:
        app: app-todoweb
    spec:
      containers:
      - image: xcevor/todoweb:0.1
        name: xcevor/todoweb:0.1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-todoweb-service
spec:
  selector:
    app: app-todoweb
  ports:
  - port: 80
