ingress-foo-modified.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: default
spec:
  ingressClassName: nginx-class
  rules:
    - host: httpd.xcevor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend1service
                port:
                  number: 80
    - host: nginx.xcevor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend2service
                port:
                  number: 80
    - host: httpd3.xcevor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend3service
                port:
                  number: 80
    - host: datetime.xcevor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datetime-frontend-service
                port:
                  number: 80
    - host: todoweb.xcevor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-todoweb-service
                port:
                  number: 80
